# ReqDefHelper

./: README.md  background.py  hello.py  idea.py  main.py  pyproject.toml  requirements.txt
data/templates/: project_template.md  proposal_template.md
samples/: sample.md  sample.txt
src/: main.py
src/agents/: document_generator.py  task_manager.py
src/models/: issue.py  project.py  task.py
src/utils/: data_utils.py  llm_utils.py
