[project]
name = "reqdefhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.7.1",
    "langchain>=0.3.9",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.53",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.1",
]
