[project]
name = "requirements-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.8.0",
    "langchain-community>=0.3.9",
    "langchain-ollama>=0.2.1",
    "langchain>=0.3.9",
    "markdown>=3.7",
    "ollama>=0.4.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]
